# Prediction-Market-Financial-Market-Divergence-Engine

./: .env.example  .gitignore  README.md  divergence-engine.service  install-service.sh  monitor.sh  pyproject.toml
divergence_engine/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
divergence_engine/analysis/: drift.py  signals.py  zscore.py
divergence_engine/collectors/: base.py  financial.py  polymarket.py
divergence_engine/mappings/: definitions.py  registry.py
divergence_engine/output/: console.py  dashboard.py
divergence_engine/storage/: database.py  models.py  queries.py
